Add external search with Crossref and Europe PMC
